# tree-sitter-bigquery

./: .gitattributes  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: test.yaml
bindings/c/: tree-sitter-bigquery.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
examples/control_flow/: 01_basic_begin_end.sql  02_if_then.sql  03_nested_blocks.sql  04_complex_scripts.sql
examples/loops/: 01_while_loop.sql  02_loop_construct.sql  03_repeat_loop.sql  04_loop_control.sql
examples/stage10_advanced/: 01_case.sql  02_cast.sql  03_operators.sql
examples/stage1_basic_select/: 01_select_number.sql  02_select_multiple_numbers.sql  03_select_column.sql  04_select_multiple_columns.sql  05_select_star.sql
examples/stage2_where_and_expressions/: 01_where_simple_comparison.sql  02_where_comparison_operators.sql  03_where_and_or.sql  04_where_not.sql  05_where_string_literals.sql  06_where_boolean_literals.sql  07_where_parentheses.sql  08_where_complex.sql
examples/stage3_aggregation/: 01_count.sql  02_aggregate_functions.sql  03_group_by.sql  04_having.sql  05_order_by.sql  06_limit.sql  07_complete_query.sql
examples/stage4_joins/: 01_inner_join.sql  02_left_join.sql  03_right_join.sql  04_full_join.sql  05_cross_join.sql  06_table_alias.sql  07_multiple_joins.sql  08_complex_join_condition.sql
examples/stage5_subqueries_cte/: 01_subquery_in_select.sql  (+6 more)
src/: grammar.json  node-types.json  parser.c
(+57 files in other folders)
